# mekaHandTouchInterface

./: README.md
mcuInterface/: CMakeLists.txt  sdkconfig
mcuInterface/components/config/: CMakeLists.txt  config.c
mcuInterface/components/daq/: CMakeLists.txt  daq.c  daq.h
mcuInterface/components/descriptors/: CMakeLists.txt  descriptors.c  descriptors.h
mcuInterface/components/lpf/: CMakeLists.txt  lpf.c  lpf.h
mcuInterface/main/: CMakeLists.txt  main.c
mcuInterface/main/comms/: comms.c  comms.h
mcuInterface/main/config/: config.c  config.h
mcuInterface/main/data_acquisition/: daq.c  daq.h
mcuInterface/main/descriptors/: descriptors.h
mcuInterface/main/filter/: lpf.h
mcuInterface/main/sensor_array/: sensor_array.c  sensor_array.h
