idf_component_register(
    SRCS
        "main.c"
        "config/config.c"
        "sensor_array/sensor_array.c"
        "data_acquisition/daq.c"
        "filter/lpf.c"
        "comms/comms.c"
        "descriptors/descriptors.c"
    INCLUDE_DIRS
        "."
        "config"
        "sensor_array"
        "data_acquisition"
        "filter"
        "comms"
        "descriptors"
    REQUIRES
        driver
        esp_adc
        esp_driver_gpio
        tinyusb
        esp_tinyusb
)
